# shiny-portal

./: .gitignore  Cargo.toml  default.nix  devenv.nix  flake.nix  meson.build
contrib/: org.freedesktop.impl.portal.desktop.shiny.service.in  shiny.portal  xdg-desktop-portal.shiny.service.in
src/: cli.rs  config.rs  main.rs
src/common/: mod.rs  pipewire_cast.rs  screenshot_capture.rs  shell_ipc.rs  wayland_capture.rs
src/portals/: mod.rs  request.rs  screen_cast.rs  screenshot.rs  session.rs
