[package]
name = "xdg-desktop-portal-shiny"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
drm = "0.15.0"
enumflags2 = "0.7.12"
futures-util = "0.3.32"
gbm = "0.18.0"
pipewire = { version = "0.10.0", features = ["v0_3_77"] }
png = "0.18.1"
rustix = { version = "1.1.4", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["full"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.13", features = [
    "client",
    "staging",
    "unstable",
] }
zbus = { version = "5.18.0", features = ["tokio"] }
zvariant = { version = "5.13.1", features = ["enumflags2"] }
